2015-10-06 Goetz Gaycken
	* Removed debug flags.

2015-10-02 Goetz Gaycken
        * resolve ATLASRECTS-2045: add TRT dE/dx and number of hits used
	  for the dE/dx value to the track summary as electron probability
	  and summary information.

2015-06-27 Miriam Diamond
	* add DBM
	* tagged as TrkTrackSummaryTool-01-02-06
	
2014-12-22 Nick Styles
	* Fix to split hit on layer intialisation
	* Tagged as TrkTrackSummaryTool-01-02-05

2014-12-17 Nick Styles
	* Update new method to also re-fill expected hit info
	* Tagged as TrkTrackSummaryTool-01-02-04

2014-12-09 Nick Styles
	* Method to just update specific info as needed
	* Tagged as TrkTrackSummaryTool-01-02-03

2014-12-01 Nick Styles
	* Fill overflow clusters
	* Tagged as TrkTrackSummaryTool-01-02-02

2014-12-01 Anthony Morley
        * Ensure that the split hit counters are set to 0
        * tag TrkTrackSummaryTool-01-02-01

2014-10-21 Nick Styles <nicholas.styles -at- cern.ch>
	* Added extra info for Run2
	* tagged as TrkTrackSummaryTool-01-02-00

2014-03-30 Andreas Salzburger < Andreas.Salzburger -at- cern.ch >
        * new updateSharedHits
        * tag TrkTrackSummaryTool-01-00-01

2013-08-21 Niels van Eldik
        * move to Eigen
        * tag TrkTrackSummaryTool-01-00-00

2012-07-26 Markus Juengst
        * Fix for access of TRT straw status 
        * tag TrkTrackSummaryTool-00-24-02

2012-01-17 Jahred Adelman
	* For TRT gas / xenon
	* tag TrkTrackSummaryTool-00-24-01

2012-01-17 Edward.Moyse@cern.ch
	* Added numberOfCscUnspoiltEtaHits
	* tag TrkTrackSummaryTool-00-24-00

2011-04-12 Markus Elsing
	* changes for interface to ID pattern track handling
	* tag TrkTrackSummaryTool-00-23-11

2010-10-28 Edward.Moyse@cern.ch
	* src/TrackSummaryTool.cxx: bug #73179: c++0x fixes for TrkTrackSummaryTool
	* tag TrkTrackSummaryTool-00-23-10

2010-09-30 Markus Elsing
	* TestBlayer in summary
	* Change order in summary computation
	* use Helper again to call HoleSearch (+TestBLayer) 